banner bug with content overflow on low-height devices fixed

--- a/src/components/Banner.res/Banner.css
+++ b/src/components/Banner.res/Banner.css
@@ -1,6 +1,5 @@
 .common {
   height: 100vh;
-  position: relative;
 
   background-image: url('./bg-image.webp');
   background-repeat: no-repeat;
@@ -9,9 +8,13 @@
 }
 
 .banner-wrapper {
-  position: absolute;
-  text-align: center;
-  top: 30%;
+  display: flex;
+  height: 100%;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+
+
   width: 100%;
 }
 
@@ -43,6 +46,7 @@
   line-height: 38px;
   color: color(black a(80%));
   text-decoration: none;
+  text-align: center;
 }
 
 @media only screen and (width <= 480px) {
